[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/font/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/menu/Common/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/menu/Common/ParallaxBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/animations/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/menu/Title/menu.gd" type="Script" id=5]
[ext_resource path="res://src/menu/Common/MenuButton.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[node name="TitleScreens" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" parent="." instance=ExtResource( 3 )]

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 460.0
margin_bottom = 250.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Menu"]
margin_right = 440.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.352941, 0.352941, 0.352941, 1 )
custom_colors/font_color_shadow = Color( 0.215686, 0.215686, 0.215686, 1 )
text = "Archeolost"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
margin_top = 53.0
margin_right = 440.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewGame" parent="Menu/CenterContainer" instance=ExtResource( 2 )]
margin_left = 182.0
margin_top = 73.0
margin_right = 257.0
margin_bottom = 103.0
script = ExtResource( 6 )
scene_to_load = "res://src/menu/Instruction/Instruction.tscn"

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="fade_in_finished" from="FadeIn" to="." method="_on_FadeIn_fade_in_finished"]
